--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
-    "nuxt": "^2.0.0",
-    "@nuxtjs/axios": "^5.3.6"
+    "@nuxtjs/axios": "^5.3.6",
+    "mongodb": "^3.5.4",
+    "nuxt": "^2.0.0"
   },
   "devDependencies": {
     "node-sass": "^4.13.1",
