--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.3.6",
     "mongodb": "^3.5.4",
+    "mongoose": "^5.9.3",
+    "multer": "^1.4.2",
     "nuxt": "^2.0.0"
   },
   "devDependencies": {
