--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.3.6",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.5.4",
     "mongoose": "^5.9.3",
+    "mongoose-unique-validator": "^2.0.3",
     "multer": "^1.4.2",
     "nuxt": "^2.0.0"
   },
